# mcp_server_with_fastapi

./: .env.example  .gitignore  API_DOCUMENTATION.md  AUTHENTICATION_GUIDE.md  CHATBOT_AUTH_README.md  INSTALLATION_GUIDE.md  PRISMA_INTEGRATION.md  QUICKSTART.md  README.md  SIMPLE_AUTH_SUMMARY.md  TROUBLESHOOTING.md  cleanup.ps1  database_setup.sql  finance_tools_showcase.py  install.bat  install.sh  main.py  mcp_comprehensive_testing_suite.py  port_checker.py  prisma_schema_extension.prisma  pyproject.toml  requirements.txt  run.bat  run_server.bat  setup_database.ps1  smart_start.py  start_port_9000.py  start_server.ps1  start_server.py  test_auth.py  test_foxstocks_api.py  test_imports.py  test_server.py  verify_setup.py
api/: __init__.py  advanced_endpoints.py  core_endpoints.py  database_utils.py  direct_finance_api.py  finance_models.py
api/finance/models/: __init__.py  news_models.py  stock_models.py
data/: symbols.db
mcp_servers/: db.py  echo.py  finance_analysis_and_predictions.py  finance_calculations.py  finance_data_ingestion.py  finance_db_company.py  finance_db_market_analysis.py  finance_db_stock_price.py  finance_helpers.py  finance_market_data.py  finance_news_and_insights.py  finance_plotting.py  finance_portfolio.py  finance_symbol_discovery.py  math.py  ml_helpers.py  user_db.py
postman_collections/: Finance_API_Advanced_Analytics.json  Finance_API_Collection.json  Finance_API_Core_Endpoints.json  Finance_API_Environment.json  Finance_API_MCP_Servers.json
static/: auth.html  chatbot.html  finance_demo.html  index.html
utils/: auth.py  auth_utils.py  data_import.py  mcp_auth_middleware.py  simple_auth.py
