[project]
name = "mcp-server-with-fastapi"
version = "0.1.0"
description = "MultiMCP Server with FastAPI - Comprehensive Finance Analysis Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core FastAPI and web framework
    "fastapi>=0.115.14",
    "uvicorn>=0.35.0",
    "starlette>=0.46.2",
    "httpx>=0.28.1",
    "python-multipart>=0.0.6",
    
    # MCP (Model Context Protocol)
    "fastmcp>=2.10.3",
    "mcp[cli]>=1.10.1",
    
    # Database
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.0",
    
    # Data analysis and finance
    "pandas>=2.2.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.40",
    "requests>=2.32.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "seaborn>=0.12.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    
    # Authentication and security
    "pyjwt>=2.10.1",
    
    # Configuration and utilities
    "python-dotenv>=1.1.1",
    "aiofiles>=23.2.0",
    "ujson>=5.8.0",
    
    # Logging
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "safety>=2.3.0",
]

production = [
    "alembic>=1.12.0",
    "gunicorn>=21.2.0",
]
